# quote-service

./: .dockerignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  Words-of-Wisdom.txt  docker-compose.yml
config/: config.yml  log4rs.yml
quote_client/: Cargo.toml
quote_client/src/: cli.rs  client.rs  config.rs  main.rs  quotes_client.rs
quote_server/: Cargo.toml
quote_server/src/: cli.rs  config.rs  main.rs  quotes_storage.rs  service.rs
quotes-lib/: Cargo.toml
quotes-lib/src/: lib.rs  network.rs  pow.rs  service.rs
