[package]
name = "quote_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.4", features = ["derive", "cargo"]}
hex = "0.4.3"
log4rs = "1.2.0"
log = "0.4.17"
quote-lib = { path = "../quotes-lib" }
sha3 = "0.10.6"
tokio = { version = "1.25.0", features = ["full"] }
