[package]
name = "quote_server"
version = "0.1.0"
edition = "2021"
authors = ["Rozhkov Dmitrii <rozhkovdmitrii@yandex.ru>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.4", features = ["derive", "cargo"]}
quote-lib = { path = "../quotes-lib" }
log4rs = "1.2.0"
log = "0.4.17"
