[package]
name = "quote_server"
version = "0.1.0"
edition = "2021"
authors = ["Rozhkov Dmitrii <rozhkovdmitrii@yandex.ru>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
clap = {version = "4.1.4", features = ["derive", "cargo"]}
hex = "0.4.3"
log = "0.4.17"
log4rs = "1.2.0"
quote-lib = { path = "../quotes-lib" }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = "1.0.152"
serde_yaml = "0.9.17"
tokio = { version = "1.25.0", features = ["full"] }
